SOW §3.1: record reactor-wide Java 27 toolchain bump (commit 07f3b368)
Documents the follow-on to the core-only toolchain wiring: all six
subprojects now share Java 27, whole-reactor ./gradlew build passes
dependency resolution, core-tls tests still 31/31. Also records two
findings surfaced along the way: a pre-existing (not caused by this
change) CertificateSelectorTest failure under real DirtyChai-27, and
the still-open gap that CI's gradle.yml workflow provisions stock
OpenJDK 17 and so cannot build this reactor at all as configured.